<resources>
    <string name="app_name">Multitool</string>
    <string name="person_btn">Personal</string>
    <string name="vpn_btn">VPN</string>
    <string name="rename_btn">Rename</string>
    <string name="more_btn">More</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="thirdName">Отчество</string>
    <string name="secondName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="addserver">AddServer</string>
    <string name="nameServer">Название сервера</string>
    <string name="adressServer">IP сервера</string>
    <string name="userNameServer">Имя пользователя</string>
    <string name="userPassServer">Пароль</string>
    <string name="publicKeyServer">Ключ сервера</string>
</resources>