<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@+id/nav_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/personScreen">

    <fragment
        android:id="@+id/personScreen"
        android:name="ru.juraogurcov.multitool.ui.person.PersonFragment"
        android:label="@string/person_btn"
        tools:layout="@layout/fragment_person" />

    <fragment
        android:id="@+id/vpnScreen"
        android:name="ru.juraogurcov.multitool.ui.vpn.VPNFragment"
        android:label="@string/vpn_btn"
        tools:layout="@layout/fragment_v_p_n" />

    <fragment
        android:id="@+id/moreInfoScreen"
        android:name="ru.juraogurcov.multitool.ui.more.MoreInfoFragment"
        android:label="@string/more_btn"
        tools:layout="@layout/fragment_more_info" />
</navigation>